Deploy/kubernetes/mozaodol/mozaodol-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mozaodol-api-deployment
  labels:
    app: mozaodol-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mozaodol-api
  template:
    metadata:
      labels:
        app: mozaodol-api
    spec:
      containers:
      - name: mozaodol-api
        image: lucasmsd1/mozaodol-api
        ports:
        - containerPort: 5188
