Deploy/kubernetes/mozaodol/mozaodol-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mozaodol-api-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: mozaodol-api-deployment
  ports:
    - protocol: TCP
      port: 5188
      targetPort: 5188
      nodePort: 30000
