Deploy/kubernetes/mozaodol/mozaodol-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mozaodol-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mozaodol-api-service
            port:
              number: 5188
